<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".LoginActivityMain">


    <TextView
        android:id="@+id/textView"
        android:layout_width="217dp"
        android:layout_height="124dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="80dp"
        android:text="@string/game_centre_user_registration"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/name"
        style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#ffffff"
        android:drawableLeft="@mipmap/user_icon"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="false"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textColorLink="#ffffff"
        android:textCursorDrawable="@null"
        android:textIsSelectable="false" />

    <EditText
        android:id="@+id/email"
        style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:backgroundTint="#ffffff"
        android:drawableStart="@drawable/email_icon"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="false"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textColorLink="#ffffff"
        android:textCursorDrawable="@null"
        android:textIsSelectable="false" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="235dp"
        android:backgroundTint="#ffffff"
        android:drawableStart="@drawable/lock_icon"
        android:hint="@string/password"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textColorLink="#FFFFFF"
        android:textCursorDrawable="@null" />

    <Button
        android:id="@+id/alreadyAUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/rounded_button"
        android:text="@string/already_a_user" />


    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="161dp"
        android:background="@drawable/rounded_button"
        android:text="@string/register" />


</RelativeLayout>
